tests/traces_overflow/traces_overflow.exp
Error -------------------------------------------------------------------------------------- stack_overflow_bug.js:56:10

Computing object literal [1] may lead to an exponentially large number of cases to reason about because inferred union
from object literal [2] | object literal [1] and inferred union from object literal [1] | object literal [1] are both
unions. Please use at most one union type per spread to simplify reasoning about the spread result. You may be able to
get rid of a union by specifying a more general type that captures all of the branches of the union.

   stack_overflow_bug.js:56:10
   56|       ...accumulator,
                ^^^^^^^^^^^

References:
   stack_overflow_bug.js:55:12
                  v
   55|     return {
   56|       ...accumulator,
   57|       [colName]: row[idx]
   58|     };
           ^ [1]
   stack_overflow_bug.js:59:6
   59|   }, {});
            ^^ [2]


Error --------------------------------------------------------------------------------------- stack_overflow_bug.js:57:8

Cannot use `colName` [1] as a computed property. Computed properties may only be primitive literal values, but this one
may be either string literal `yyyyy` [2] or string literal `zzz_xxxxx` [3]. Can you add a literal type annotation to
`colName` [1]? See https://flow.org/en/docs/types/literals/ for more information on literal types.

   stack_overflow_bug.js:57:8
   57|       [colName]: row[idx]
              ^^^^^^^ [1]

References:
   stack_overflow_bug.js:3:11
    3| const A = 'yyyyy';
                 ^^^^^^^ [2]
   stack_overflow_bug.js:4:11
    4| const B = 'zzz_xxxxx';
                 ^^^^^^^^^^^ [3]



Found 2 errors
